--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "projeto-atividade-03",
-  "version": "1.0.0",
+  "name": "projeto-atividade-03-alterado-02",
+  "version": "1.0.3",
   "description": "Atividade prática 3 - Lista de tarefas Git/GitHub  /  Malu Calland 2314290066",
   "main": "index.js",
   "scripts": {
